COPIAMOS LA CARPETA WEB - SOURCE PACKAGE SENA 07-02-2019

--- a/digital_events_repository/web/WEB-INF/includes/menus/administrador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/administrador.xhtml
@@ -7,7 +7,7 @@
     
 
     <li class="nav-item ">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#{request.contextPath}/SI/administrador/perfil/perfil.xhtml">
             <i class="material-icons">person</i>
             <p>Perfil de Usuario</p>
         </a>
@@ -61,7 +61,7 @@
         </div>
     </li>
     <li class="nav-item ">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#{request.contextPath}/SI/administrador/inventario/inventario.xhtml">
             <i class="material-icons">inventory</i>
             <p>Inventario</p>
         </a>
