--- a/digital_events_repository/web/WEB-INF/includes/menus/cliente.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/cliente.xhtml
@@ -7,7 +7,7 @@
    
 
     <li class="nav-item ">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#{request.contextPath}/SI/cliente/perfil/perfil.xhtml">
             <i class="material-icons">person</i>
             <p>Perfil de Usuario</p>
         </a>
@@ -22,7 +22,7 @@
         <div class="collapse" id="ventas">
             <ul class="nav">
                 <li class="nav-item ">
-                    <a class="nav-link l" href="#">
+                    <a class="nav-link l" href="#{request.contextPath}/SI/cliente/ventas/solicitud.xhtml">
                         <i class="far fa-calendar-plus"></i>
                         <span class="sidebar-normal">Nueva solicitud</span>
                     </a>
@@ -40,7 +40,7 @@
         <div class="collapse" id="controlEventos">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link l" href="#">
+                    <a class="nav-link l" href="#{request.contextPath}/SI/cliente/eventos/eventos.xhtml">
                         <i class="fas fa-clipboard-check"></i>
                         <span class="sidebar-normal">Eventos Realizados</span>
                     </a>
