--- a/digital_events_repository/web/WEB-INF/includes/menus/recreador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/recreador.xhtml
@@ -7,7 +7,7 @@
     
 
     <li class="nav-item ">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#{request.contextPath}/SI/recreador/perfil/perfil.xhtml">
             <i class="material-icons">person</i>
             <p>Perfil de Usuario</p>
         </a>
@@ -22,7 +22,7 @@
         <div class="collapse" id="controlEventos">
             <ul class="nav">
                 <li class="nav-item ">
-                    <a class="nav-link l" href="#">
+                    <a class="nav-link l" href="#{request.contextPath}/SI/recreador/eventos/eventos.xhtml">
                         <i class="material-icons">library_books</i>
                         <span class="sidebar-normal">Eventos Reservados</span>
                     </a>
