--- a/digital_events_repository/web/WEB-INF/includes/menus/coordinador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/coordinador.xhtml
@@ -7,13 +7,13 @@
     
 
     <li class="nav-item ">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#{request.contextPath}/SI/coordinador/perfil/perfil.xhtml">
             <i class="material-icons">person</i>
             <p>Perfil de Usuario</p>
         </a>
     </li>
     <li class="nav-item ">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#{request.contextPath}/SI/coordinador/usuarios/index.xhtml">
             <i class="material-icons">content_paste</i>
             <p>Gestion de Usuarios</p>
         </a>
@@ -28,7 +28,7 @@
         <div class="collapse" id="controlEventos">
             <ul class="nav">
                 <li class="nav-item ">
-                    <a class="nav-link l" href="#">
+                    <a class="nav-link l" href="#{request.contextPath}/SI/coordinador/eventos/eventos.xhtml">
                         <i class="material-icons">library_books</i>
                         <span class="sidebar-normal">Eventos Reservados</span>
                     </a>
@@ -43,7 +43,7 @@
         </div>
     </li>
     <li class="nav-item ">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#{request.contextPath}/SI/coordinador/inventario/inventario.xhtml">
             <i class="material-icons">inventory</i>
             <p>Inventario</p>
         </a>
