Agregue el controller del grafrico

--- a/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
@@ -22,6 +22,7 @@
     <script src="#{request.contextPath}/resources/js/googleapis.js"></script>
     <script src="#{request.contextPath}/resources/demo/demo.js"></script>
     <script src="#{request.contextPath}/resources/js/scripts.js"></script>
+    <script src="#{request.contextPath}/resources/js/zingchart.min.js"></script>
     <script>
         $(document).ready(function () {
             // Javascript method's body can be found in assets/js/demos.js
