--- a/digital_events_repository/web/WEB-INF/includes/dashboard/administrador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/dashboard/administrador.xhtml
@@ -4,10 +4,41 @@
              xmlns:h="http://xmlns.jcp.org/jsf/html"
              xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
              xmlns:p="http://primefaces.org/ui">
-
-    
-        
-  
-
+    <script>
+        var fechaReserva = [#{grafricoReservasController.graficoReserva(grafricoReservasController.fechaReserva, ",")}];
+        var numeroEventos = [#{grafricoReservasController.graficoReserva(grafricoReservasController.numeroEventos, ",")}];
+        window.onload = function ()
+        {
+            zingchart.render
+                    ({
+                        id: "myChart",
+                        width: "100%",
+                        height: 400,
+                        data:
+                                {
+                                    "type": "bar",
+                                    "title":
+                                            {
+                                                "text": "Grafrico "
+                                            },
+                                    "scale-x":
+                                            {
+                                                "labels": fechaReserva
+                                            },
+                                    "plot":
+                                            {
+                                                "line-width": 1
+                                            },
+                                    "series":
+                                            [
+                                                {
+                                                    "values": numeroEventos
+                                                }
+                                            ]
+                                }
+                    });
+        };
+    </script>
+    <div id="myChart"></div>
 </ui:fragment>
 
