--- a/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
@@ -7,6 +7,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top">
         <div class="container-fluid">
+<!--            <button type="button" id="sidebarCollapse" class="bnt btn-success btn-flat m-b-30 m-t-30">
+                <i class="material-icons">dashboard</i>
+            </button>-->
             <div class="navbar-wrapper">
                 <a class="navbar-brand" href="#">Dashboard</a>
             </div>
