--- a/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
@@ -43,5 +43,17 @@
             $('#sidebar').toggleClass('active');
         });
     </script>
+
+<!--    <script type="text/javascript">
+        window.onload = function () {
+            var contenedor = document.getElementById('contenedor-carga');
+            contenedor.style.visibility = 'hidden';
+            contenedor.style.opacity = '0';
+        };
+    </script>-->
+
+
+
+
 </ui:fragment>
 
