Agregue ya los grafricos de inventario, ventas y ususarios

--- a/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
@@ -51,7 +51,7 @@
             contenedor.style.opacity = '0';
         };
     </script>-->
-
+<ui:insert name="scripts-grafricos"></ui:insert>
 
 
 
