--- a/digital_events_repository/web/WEB-INF/includes/dashboard/administrador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/dashboard/administrador.xhtml
@@ -66,7 +66,7 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header card-chart card-header-info">
-                            <div class="ct-chart" id="myChart"></div>
+                            <div class="ct-chart" id="myChartAdministrador"></div>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Ventas Diarias</h4>
@@ -92,41 +92,6 @@
 
 
 
-    <script>
-        var fechaReserva = [#{graficoReservasController.graficoReserva(graficoReservasController.fechaReserva, ",")}];
-        var numeroEventos = [#{graficoReservasController.graficoReserva(graficoReservasController.numeroEventos, ",")}];
-        window.onload = function ()
-        {
-            zingchart.render
-                    ({
-                        id: "myChart",
-                        width: "100%",
-                        height: 300,
-                        data:
-                                {
-                                    "type": "bar",
-                                    "title":
-                                            {
-                                                "text": "Grafico "
-                                            },
-                                    "scale-x":
-                                            {
-                                                "labels": fechaReserva
-                                            },
-                                    "plot":
-                                            {
-                                                "line-width": 1
-                                            },
-                                    "series":
-                                            [
-                                                {
-                                                    "values": numeroEventos
-                                                }
-                                            ]
-                                }
-                    });
-        };
-
-    </script>
+    
 </ui:fragment>
 
