1. ARREGLE LA VISTA DE INICIO.

--- a/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
@@ -24,7 +24,7 @@
                 <form class="navbar-form">
                     <div class="input-group no-border has-success">
                         <input type="text" value="" class="form-control" placeholder="Search..."/>
-                        <button type="submit" class="btn btn-success btn-round btn-just-icon">
+                        <button type="submit" class="btn btn-danger btn-round btn-just-icon">
                             <i class="material-icons">search</i>
                             <div class="ripple-container"></div>
                         </button>
