--- a/digital_events_repository/web/resources/css/estilo_admi.css
+++ b/digital_events_repository/web/resources/css/estilo_admi.css
@@ -88,7 +88,7 @@ esta clase "movericon" es para mover el icono de añadir usuario
 
 .navbar .notification{
 
-    background: #4caf50 !important;
+    background: #f44336 !important;
 }
 
 .dropdown-menu a:hover{
