--- a/digital_events_repository/web/resources/css/material-dashboard.css
+++ b/digital_events_repository/web/resources/css/material-dashboard.css
@@ -4067,7 +4067,11 @@ button.close {
 
 @media (min-width: 992px) {
   .modal-lg {
-    max-width: 800px; } }
+    max-width: 800px; }
+  .modal-xl {
+    max-width: 1250px;  
+  }
+}
 
 .tooltip {
   position: absolute;
