--- a/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
@@ -2,14 +2,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:fragment xmlns="http://www.w3.org/1999/xhtml"
              xmlns:h="http://xmlns.jcp.org/jsf/html"
-             xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+             xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+             xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top">
         <div class="container-fluid">
-<!--            <button type="button" id="sidebarCollapse" class="bnt btn-success btn-flat m-b-30 m-t-30">
-                <i class="material-icons">dashboard</i>
-            </button>-->
+            <!--            <button type="button" id="sidebarCollapse" class="bnt btn-success btn-flat m-b-30 m-t-30">
+                            <i class="material-icons">dashboard</i>
+                        </button>-->
             <div class="navbar-wrapper">
                 <a class="navbar-brand" href="#">Dashboard</a>
             </div>
@@ -39,6 +40,16 @@
                             </p>
                         </a>
                     </li>
+                    <h:form prependId="false">
+                        <h:selectOneMenu class="btn btn-outline-info d-lg-inline-block mb-3 mb-md-3" value="#{languajeController.lenguaje}" onchange="submit()">
+                            <f:selectItems value="#{languajeController.idiomaPredefinido}" var="l" itemLabel="#{l.language}"></f:selectItems>
+                        </h:selectOneMenu>
+                    </h:form>
+                    <div id="google_translate_element" style="margin: 5px; "></div><script type="text/javascript">
+                        function googleTranslateElementInit() {
+                            new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
+                        }
+                    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="http://example.com" id="notificaciones" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="material-icons">notifications</i>
