--- a/digital_events_repository/web/WEB-INF/includes/template/head.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/head.xhtml
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Dashboard</title>
+    <title>#{head.lbl_titulo_pagina}</title>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/estilo_admi.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/fontawesome-all.css"/>
