1. AGREGUE LA BASE DEL FORMULARIO SOLICITUD. (falta terminar) 2. HICE PULL Y ANEXE EL NUEVO MODELO (Error en registro usuarios y la internacionalizacion esta defectuosa. No muestras muchos campos...).

--- a/digital_events_repository/web/WEB-INF/includes/template/head.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/head.xhtml
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/material-dashboard.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/fontsgoogle.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="#{request.contextPath}/resources/demo/demo.css"/>
+    <link rel="stylesheet" href="#{request.contextPath}/resources/demo/demo.css"/>  
+    <link rel="stylesheet" href="#{request.contextPath}/resources/fonts/linearicons/style.css"/>
+    <link rel="stylesheet" href="#{request.contextPath}/resources/fonts/material-design-iconic-font/css/material-design-iconic-font.css"/>
+
     <ui:insert name="styles-page"></ui:insert>
-</ui:fragment>
+    </ui:fragment>
 
