1. Agregue libreria JS

--- a/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
@@ -5,7 +5,8 @@
              xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <script src="#{request.contextPath}/resources/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-    <script src="#{request.contextPath}/resources/js/jquery-3.3.1.slim.min.js"></script>
+<!--    <script src="#{request.contextPath}/resources/js/jquery-3.3.1.slim.min.js"></script>-->
+    <script src="#{request.contextPath}/resources/js/jquery-3.3.1.min.js"></script>
     <script src="#{request.contextPath}/resources/js/jquery-3.3.1.js"></script>
     <script src="#{request.contextPath}/resources/js/jquery.dataTables.min.js"></script>
     <script src="#{request.contextPath}/resources/js/core/jquery.min.js"></script>
