--- a/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
@@ -73,6 +73,13 @@
         });
     </script>
 
+    <script type="text/javascript">
+        $(document).on("click", '[data-toggle="lightbox"]', function (event) {
+            event.preventDefault();
+            $(this).ekkoLightbox();
+        });
+    </script>
+
 
     <ui:insert name="scripts-grafricos"></ui:insert>
 </ui:fragment>
