Enlace la internacionizacion a las 1:21 pm

--- a/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/header.xhtml
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <h:form prependId="false">
-                        <h:selectOneMenu class="btn btn-outline-info d-lg-inline-block mb-3 mb-md-3" value="#{languajeController.lenguaje}" onchange="submit()">
+                        <h:selectOneMenu class="btn btn-outline-info d-lg-inline-block mb-3 mb-md-3" value="#{lenguajeController.languaje}" onchange="submit();">
                             <f:selectItems value="#{languajeController.idiomaPredefinido}" var="l" itemLabel="#{l.language}"></f:selectItems>
                         </h:selectOneMenu>
                     </h:form>
