Enlace la internacionizacion del menu de cliente,recreacisonista,administrador,modulo completo administrador a las 1:39 pm

--- a/digital_events_repository/web/WEB-INF/includes/menus/administrador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/administrador.xhtml
@@ -10,19 +10,19 @@
     <li class="nav-item ">
         <a class="nav-link" href="#{request.contextPath}/SI/administrador/perfil/perfil.xhtml">
             <i class="material-icons">person</i>
-            <p>Perfil de Usuario</p>
+            <p>#{menuadmin.lbl_perfil_usuario}</p>
         </a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#{request.contextPath}/SI/administrador/usuarios/index.xhtml">
             <i class="material-icons">content_paste</i>
-            <p>Gestion de Usuarios</p>
+            <p>#{menuadmin.lbl_gestion_de_usuario}</p>
         </a>
     </li>
     <li class="nav-item ">
         <a class="nav-link collapsed" data-toggle="collapse" href="#pagesExamples" aria-expanded="false" data-target="#ventas">
             <i class="material-icons">attach_money</i>
-            <p>Ventas 
+            <p>#{menuadmin.lbl_ventas}
                 <b class="caret"></b>
             </p>
         </a>
@@ -31,7 +31,7 @@
                 <li class="nav-item ">
                     <a class="nav-link l" href="#{request.contextPath}/SI/administrador/ventas/indexVentas.xhtml">
                         <i class="far fa-calendar-plus"></i>
-                        <span class="sidebar-normal">Eventos</span>
+                        <span class="sidebar-normal">#{menuadmin.lbl_ventas}</span>
                     </a>
                 </li>
             </ul>
@@ -39,7 +39,7 @@
                 <li class="nav-item ">
                     <a class="nav-link l" href="#{request.contextPath}/SI/administrador/ventas/solicitud.xhtml">
                         <i class="far fa-calendar-plus"></i>
-                        <span class="sidebar-normal">Nuevas solicitudes</span>
+                        <span class="sidebar-normal">#{menuadmin.lbl_nuevas_solicitud}</span>
                     </a>
                 </li>
             </ul>
@@ -48,7 +48,7 @@
     <li class="nav-item ">
         <a class="nav-link collapsed" data-toggle="collapse" href="#pagesExamples" aria-expanded="false" data-target="#controlEventos">
             <i class="material-icons">event_available</i>
-            <p> Control Eventos
+            <p> #{menuadmin.lbl_control_events}
                 <b class="caret"></b>
             </p>
         </a>
@@ -57,13 +57,13 @@
                 <li class="nav-item ">
                     <a class="nav-link l" href="#{request.contextPath}/SI/administrador/eventos/eventos.xhtml">
                         <i class="material-icons">library_books</i>
-                        <span class="sidebar-normal">Eventos Reservados</span>
+                        <span class="sidebar-normal">#{menuadmin.lbl_eventos_reservador}</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link l" href="#">
                         <i class="fas fa-clipboard-check"></i>
-                        <span class="sidebar-normal">Eventos Realizados</span>
+                        <span class="sidebar-normal">#{menuadmin.lbl_eventos_realizados}</span>
                     </a>
                 </li>
                 
@@ -73,7 +73,7 @@
     <li class="nav-item ">
         <a class="nav-link" href="#{request.contextPath}/SI/administrador/inventario/inventario.xhtml">
             <i class="material-icons">inventory</i>
-            <p>Inventario</p>
+            <p>#{menuadmin.lbl_inventario}</p>
         </a>
     </li>
   
