--- a/digital_events_repository/web/WEB-INF/includes/menus/recreador.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/menus/recreador.xhtml
@@ -9,13 +9,13 @@
     <li class="nav-item ">
         <a class="nav-link" href="#{request.contextPath}/SI/recreador/perfil/perfil.xhtml">
             <i class="material-icons">person</i>
-            <p>Perfil de Usuario</p>
+            <p>#{menurecreacionista.lbl_perfil_usuario}</p>
         </a>
     </li>
     <li class="nav-item ">
         <a class="nav-link collapsed" data-toggle="collapse" href="#pagesExamples" aria-expanded="false" data-target="#controlEventos">
             <i class="material-icons">event_available</i>
-            <p> Control Eventos
+            <p> #{menurecreacionista.lbl_control_events}
                 <b class="caret"></b>
             </p>
         </a>
@@ -24,13 +24,13 @@
                 <li class="nav-item ">
                     <a class="nav-link l" href="#{request.contextPath}/SI/recreador/eventos/eventos.xhtml">
                         <i class="material-icons">library_books</i>
-                        <span class="sidebar-normal">Eventos Reservados</span>
+                        <span class="sidebar-normal">#{menurecreacionista.lbl_eventos_reservador}</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link l" href="#">
                         <i class="fas fa-clipboard-check"></i>
-                        <span class="sidebar-normal">Eventos Realizados</span>
+                        <span class="sidebar-normal">#{menurecreacionista.lbl_eventos_realizados}</span>
                     </a>
                 </li>
             </ul>
