--- a/digital_events_repository/web/WEB-INF/includes/template/head.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/head.xhtml
@@ -3,6 +3,7 @@
 <ui:fragment xmlns="http://www.w3.org/1999/xhtml"
              xmlns:h="http://xmlns.jcp.org/jsf/html"
              xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/material-dashboard.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/fontsgoogle.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="#{request.contextPath}/resources/css/material-kit.css?v=2.0.5"/>    
     <link rel="stylesheet" href="#{request.contextPath}/resources/demo/demo.css"/>  
     <link rel="stylesheet" href="#{request.contextPath}/resources/fonts/linearicons/style.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/fonts/material-design-iconic-font/css/material-design-iconic-font.css"/>
