--- a/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/scripts.xhtml
@@ -27,6 +27,11 @@
     <script src="#{request.contextPath}/resources/canvasjs/canvasjs.min.js"></script>
     <script src="#{request.contextPath}/resources/js/jquery.steps.js"></script>
     <script src="#{request.contextPath}/resources/js/main.js"></script>
+    <script src="#{request.contextPath}/resources/js/plugins/moment.min.js"></script>
+    <script src="#{request.contextPath}/resources/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+    <script src="#{request.contextPath}/resources/js/plugins/nouislider.min.js" type="text/javascript"></script>
+    <script src="#{request.contextPath}/resources/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
+    
 
     <script>
         $(document).ready(function () {
