Realize en ingles y español el inicio de session y corregi la catualizacion del perfil de usuario

--- a/digital_events_repository/web/WEB-INF/includes/template/left-panel.xhtml
+++ b/digital_events_repository/web/WEB-INF/includes/template/left-panel.xhtml
@@ -24,7 +24,7 @@
                 <li class="nav-item active" >
                     <a class="nav-link" href="#{request.contextPath}/SI/index.xhtml">
                         <i class="material-icons">dashboard</i>
-                        <p>Inicio</p>
+                        <p>#{menuadmin.lbl_inicio}</p>
                     </a>
                 </li>
                 <h:panelGroup rendered="#{sessionController.user.rol.id eq 1}" layout="block">
